unpackaged/main/default/objects/Retool_License__c/Retool_License__c.object-meta.xml
<CustomObject>
    <label>Retool License</label>
    <nameField>
        <label>Retool License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retool Licenses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>