unpackaged/main/default/objects/Retool_License__c/fields/Associated_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Associated_Accounts__c</fullName>
    <label>Associated Accounts</label>
    <type>TextArea</type>
</CustomField>