unpackaged/main/default/objects/Retool_License__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>