unpackaged/main/default/objects/Retool_License__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Retool Licenses</relationshipLabel>
    <relationshipName>Retool_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>