unpackaged/main/default/objects/Retool_License__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>