unpackaged/main/default/objects/Retool_License__c/fields/Created_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Email__c</fullName>
    <label>Created By Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>