unpackaged/main/default/objects/Retool_License__c/fields/Days_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiration__c</fullName>
    <formula>IF((DATEVALUE(Expires_At__c)-TODAY())&lt;= 0,0,DATEVALUE(Expires_At__c)-TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>