unpackaged/main/default/objects/Retool_License__c/fields/Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Month__c</fullName>
    <formula>DATE(YEAR(DATEVALUE(Expires_At__c)),MONTH(DATEVALUE(Expires_At__c)),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Month</label>
    <type>Date</type>
</CustomField>