unpackaged/main/default/objects/Retool_License__c/fields/Feature_Flags__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flags__c</fullName>
    <label>Feature Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>