unpackaged/main/default/objects/Retool_License__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalId>true</externalId>
    <label>ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>