unpackaged/main/default/objects/Retool_License__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <formula>DATEVALUE(Expires_At__c)&lt;TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired?</label>
    <type>Checkbox</type>
</CustomField>