unpackaged/main/default/objects/Retool_License__c/fields/Key_Type__c.field-meta.xml
<CustomField>
    <fullName>Key_Type__c</fullName>
    <label>Key Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSOP</fullName>
            </value>
            <value>
                <fullName>Self-hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>