unpackaged/main/default/objects/Retool_License__c/fields/License_Key_Hash__c.field-meta.xml
<CustomField>
    <fullName>License_Key_Hash__c</fullName>
    <externalId>true</externalId>
    <label>License Key Hash</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>