unpackaged/main/default/objects/Retool_License__c/fields/Needs_Routing__c.field-meta.xml
<CustomField>
    <fullName>Needs_Routing__c</fullName>
    <formula>IF(
  CASE(Status__c,
    &quot;Internal&quot;,IF(ISBLANK(Account__c) || NOT(Account__r.Is_Retool_Account__c),1,0),
    &quot;Partner&quot;,IF(ISBLANK(Account__c),1,0),
    &quot;Customer&quot;,IF(
       Is_Expired__c,
       0,
       CASE(Key_Type__c,
         &quot;Self-hosted&quot;,IF(ISBLANK(Business_Unit__c) &amp;&amp; ISBLANK(Opportunity__c),1,0),
         &quot;SSOP&quot;,IF(ISBLANK(Account__c) || Account__r.Automatically_Reparent_Entities__c,1,0),
         0
       )
     ),    
    0
  )=1,
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Routing?</label>
    <type>Checkbox</type>
</CustomField>