unpackaged/main/default/objects/Retool_License__c/fields/Num_Active_Air_gapped_Keys__c.field-meta.xml
<CustomField>
    <fullName>Num_Active_Air_gapped_Keys__c</fullName>
    <label># Active Air-gapped Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>