unpackaged/main/default/objects/Retool_License__c/fields/Num_Active_Licensed_Retool_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Num_Active_Licensed_Retool_Orgs__c</fullName>
    <label># Active Licensed Retool Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>