unpackaged/main/default/objects/Retool_License__c/fields/Num_Air_gapped_Keys__c.field-meta.xml
<CustomField>
    <fullName>Num_Air_gapped_Keys__c</fullName>
    <label># Air-gapped Keys</label>
    <summaryForeignKey>Retool_Air_gapped_License__c.Retool_License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>