unpackaged/main/default/objects/Retool_License__c/fields/Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ops_Notes__c</fullName>
    <label>Ops Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>