unpackaged/main/default/objects/Retool_License__c/fields/Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Partner_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Relationship</label>
    <referenceTo>Partner_Relationship__c</referenceTo>
    <relationshipLabel>Retool Licenses</relationshipLabel>
    <relationshipName>Retool_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>