unpackaged/main/default/objects/Retool_License__c/fields/Permission_Check__c.field-meta.xml
<CustomField>
    <fullName>Permission_Check__c</fullName>
    <label>Permission Check</label>
    <type>DateTime</type>
</CustomField>