unpackaged/main/default/objects/Retool_License__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Customer&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Retool_Org_Status</valueSetName>
    </valueSet>
</CustomField>