unpackaged/main/default/objects/Retool_License__c/fields/Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Triage_Status__c</fullName>
    <label>Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Expire</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>