unpackaged/main/default/objects/Retool_License__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <formula>TEXT(Num_Active_Licensed_Retool_Orgs__c)&amp;&quot; Active Orgs | &quot;&amp;
TEXT(Total_MAU__c)&amp;&quot; MAU | &quot;&amp;
TEXT(Total_Apps__c)&amp;&quot; apps | &quot;&amp;
TEXT(Total_Resources__c)&amp;&quot; resources&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage</label>
    <type>Text</type>
</CustomField>