unpackaged/main/default/objects/Retool_License__c/validationRules/Business_Unit_No_SSOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Unit_No_SSOP</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Business_Unit__c) &amp;&amp;
NOT(ISBLANK(Business_Unit__c)) &amp;&amp;
ISPICKVAL(Key_Type__c,&quot;SSOP&quot;) 

&amp;&amp; NOT(ISCHANGED(Permission_Check__c))</errorConditionFormula>
    <errorDisplayField>Business_Unit__c</errorDisplayField>
    <errorMessage>Cannot associate SSOP Retool License with a Business Unit</errorMessage>
</ValidationRule>