unpackaged/main/default/objects/Retool_License__c/validationRules/Opportunity_No_SSOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_No_SSOP</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Opportunity__c) &amp;&amp;
NOT(ISBLANK(Opportunity__c)) &amp;&amp;
ISPICKVAL(Key_Type__c,&quot;SSOP&quot;)
&amp;&amp; NOT(ISCHANGED(Permission_Check__c))</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Cannot associate SSOP key with an opportunity</errorMessage>
</ValidationRule>