unpackaged/main/default/objects/Retool_License__c/validationRules/partner_relationship_no_bu_no_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>partner_relationship_no_bu_no_opp</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Partner_Relationship__c)) &amp;&amp; 
(NOT(ISBLANK(Business_Unit__c)) || NOT(ISBLANK(Opportunity__c)))</errorConditionFormula>
    <errorMessage>Partner license cannot be mapped to a business unit or opportunity</errorMessage>
</ValidationRule>