unpackaged/main/default/objects/Retool_License__c/validationRules/SSOP_no_partner_relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>SSOP_no_partner_relationship</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Partner_Relationship__c) &amp;&amp;
NOT(ISBLANK(Partner_Relationship__c)) &amp;&amp;
ISPICKVAL(Key_Type__c,&quot;SSOP&quot;)</errorConditionFormula>
    <errorMessage>Cannot associate an SSOP key with a Partner Relationship</errorMessage>
</ValidationRule>