unpackaged/main/default/objects/Retool_License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Domain__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Key_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>